MVVM Arquitecture: PollApp
- Navigation Component
- ViewModel -> LiveData
- Room, Dao, Entities

--- a/app/src/main/res/layout/results_fragment.xml
+++ b/app/src/main/res/layout/results_fragment.xml
@@ -42,7 +42,7 @@
             android:id="@+id/polls_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@={@string/polls_text(viewModel.questionCount)}"
+            android:text="@{@string/polls_text(viewModel.questionCount)}"
             android:textSize="@dimen/text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="49dp"
             android:text="@string/new_poll"
+            android:onClick="@{() -> viewModel.restart()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.507"
