--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,6 +5,9 @@
         android:id="@+id/homeFragment"
         android:title="@string/home_text" />
     <item
+        android:id="@+id/questionFragment"
+        android:title="@string/questions" />
+    <item
         android:id="@+id/aboutFragment"
         android:title="@string/about" />
 </menu>
