--- a/app/src/main/res/layout/poll_fragment.xml
+++ b/app/src/main/res/layout/poll_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -14,10 +14,10 @@
         android:id="@+id/pollFragment">
 
         <TextView
-            android:id="@+id/type_text"
+            android:id="@+id/question_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.currentQuestion.text}"
+            android:text="@{viewModel.currentQuestion.question.text}"
             android:textSize="@dimen/question_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,13 +37,24 @@
             android:gravity="start|top"
             android:hint="@string/insert_your_answer"
             android:inputType="textMultiLine"
-            android:text="@={viewModel.currentQuestion.answer}"
+            android:text="@={viewModel.currentQuestion.question.answer}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/type_text"
+            app:layout_constraintTop_toBottomOf="@+id/question_text"
             app:layout_constraintVertical_bias="0.025" />
+
+        <TextView
+            android:id="@+id/type_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@{viewModel.currentQuestion.type}"
+            android:textSize="@dimen/text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/answer_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
