RecyclerView implementation for QuestionType list.
- Create QuestionTypeAdapter
- Create drawable resources for items.
- View for Types and Delete function.

--- a/app/src/main/res/layout/add_question_type_fragment.xml
+++ b/app/src/main/res/layout/add_question_type_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
@@ -27,5 +28,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.188" />
+
+        <EditText
+            android:id="@+id/icon_index_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:ems="10"
+            android:hint="@string/insert_the_icon_index"
+            android:inputType="number"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question_text"
+            app:layout_constraintVertical_bias="0.105" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
